name:     karamaan-plankton
version:  0.2
synopsis: A small utility package for Opaleye
author:   Purely Agile
build-type: Simple
cabal-version: >= 1.2
License:      OtherLicense
License-File: LICENSE
Description: A small utility package for Opaleye

library
  build-depends:   base >= 4 && < 5, time >= 1.4 && < 1.5,
                   strptime >= 1.0 && < 1.1, old-locale >= 1.0 && < 1.1,
                   safe >= 0.3 && < 0.4,
                   lens >= 3.10 && < 4.3
  exposed-modules: Karamaan.Plankton,
                   Karamaan.Plankton.Arrow,
                   Karamaan.Plankton.Arrow.Lens,
                   Karamaan.Plankton.Arrow.Orphans,
                   Karamaan.Plankton.Arrow.ReaderCurry,
                   Karamaan.Plankton.Date
  ghc-options:     -Wall
